mim-OE-SE-iOS-developer-v5-8-2-Release-Notes
## mimik Client Library changes

Includes **mim OE developer** binary v3.14.0

### Misc
- Updated documentation and README.
- Updated CocoaPod dependencies.

## mim OE Runtime changes
Maintenance Update & License Renewal

- System performance and stability improvements
- Updated license for 2025
- Security patches applied
- Bug fixes and dependency updates

--- a/EdgeEngine.xcframework/ios-arm64/EdgeEngine.framework/Modules/EdgeEngine.swiftmodule/arm64-apple-ios.abi.json
+++ b/EdgeEngine.xcframework/ios-arm64/EdgeEngine.framework/Modules/EdgeEngine.swiftmodule/arm64-apple-ios.abi.json
@@ -623,6 +623,27 @@
         "conformances": [
           {
             "kind": "Conformance",
+            "name": "Decodable",
+            "printedName": "Decodable",
+            "usr": "s:Se",
+            "mangledName": "$sSe"
+          },
+          {
+            "kind": "Conformance",
+            "name": "Encodable",
+            "printedName": "Encodable",
+            "usr": "s:SE",
+            "mangledName": "$sSE"
+          },
+          {
+            "kind": "Conformance",
+            "name": "Sendable",
+            "printedName": "Sendable",
+            "usr": "s:s8SendableP",
+            "mangledName": "$ss8SendableP"
+          },
+          {
+            "kind": "Conformance",
             "name": "Copyable",
             "printedName": "Copyable",
             "usr": "s:s8CopyableP",
